# system_analysis_laboratories_0

./: CMakeLists.txt  README.md
sources/cli/: CMakeLists.txt  main.cpp
sources/common/: actors.hpp  game.hpp  map.hpp  statistics.hpp
sources/plotter/: CMakeLists.txt  application.qmlproject  main.cpp  main.qml  statistics_model.cpp  statistics_model.hpp
